2009-03-30 Carine Chum <carine.chum@free.fr>
	* acinclude.m4 : Adding version to boost libraries names.
	
	* common/loadbmp.cpp : Now using namespace alias for 
	boost::filesystem.
	* common/globaluri.cpp : Now using namespace alias for 
	boost::filesystem.
	* common/curlgetfile.cpp : Now using namespace alias for 
	boost::filesystem.

2009-03-28 Jerome Pasquier  <rainbru@free.fr>
	* common/curlsubmit.cpp : now uses gettext.
	* common/curlservermodifclients.cpp : now uses gettext.
	* common/curlserverdelete.cpp : now uses gettext.
	* common/curlserveradd.cpp : now uses gettext.
	
	* common/Makefile.in : header/sources lists now sorted.

2009-03-27 Jerome Pasquier  <rainbru@free.fr>
	* common/curlposteddata.cpp : Now uses gettext.
	* common/curlgetfile.cpp : Now uses gettext.
	* common/curlgetfile.cpp : Prepare strings to be translated
	using sprintf instead of LOGCAT*.
	
	* ogreGui/bggui.cpp (injectRightMouseButtonPressed): Fix a bug
	in the right mouse button handling that avoid the drawing of
	the PopupMenu of the MultiColumnList.
	
2009-03-18  gettextize  <bug-gnu-gettext@gnu.org>

	* Makefile.am (SUBDIRS): Add po.
	(ACLOCAL_AMFLAGS): New variable.
	(EXTRA_DIST): Add config.rpath, m4/ChangeLog.
	* configure.in (AC_CONFIG_FILES): Add po/Makefile.in.

2009-03-18 Jerome Pasquier  <rainbru@free.fr>
	* common/attributemodifierlist.cpp : Now using gettext.
	* common/chartbase.cpp : Now using gettext.
	
2009-02-16 Jerome Pasquier  <rainbru@free.fr>
	* ogreGui/sobetagui.cpp (drawToolTip): Better fix for the
	tooltip drawing bug.

	* ogreGui/sobetagui.cpp (drawToolTip): Fix a bug when drawing tootip.

2009-02-13 Jerome Pasquier  <rainbru@free.fr>
	* ogreGui/dialog.cpp (draw): Now handle the geometryDirty flag to
	avoid a bug when moving a dialog.

	* ogreGui/scrollpane.h : resize() implementation.
	
2009-02-12 Jerome Pasquier  <rainbru@free.fr>
	* ogreGui/messagebox.h : function initWindow() removed.

	* client/guimanager.cpp (showMessageBox) : Uses the new MessageBox.