@@ -1,7 +1,7 @@
 *RainbruRPG - A 3D multiplayer Role Playing Game project based on Ogre3D.
 
 o [Carine] cross-compilation to win32
-./bootstrap&&./configure --host=i586-mingw32msvc --prefix=/usr/cross/
+./bootstrap&&./configure --host=i586-mingw32msvc --prefix=/usr/cross/ --enable-Wno-stddep-ogre
 - Fixing client executable size (310Mo) (see and update doc_cross_compil)
 
 o [rainbru] Fixing some OgreGui related graphical bugs
